@@ -71,6 +71,9 @@ List the supported processors.
 Upon completion of the final pass of assembly, display the contents of 
 instruction memory.
 .TP
+.B -M, --deps
+Output a dependency file.
+.TP
 .B -n, --dos
 By default, gpasm generates hex files using ISO format.  However, some device 
 programmers required a DOS formatted file.  This option will cause gpasm to 
